[project]
name = "ds-sandbox"
version = "0.1.0"
description = "python DS sandbox"
authors = [
    {name = "Sudhir"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mysqlclient (>=2.2.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
